
- Issue #8164: Don't allow lambda functions to have a docstring.

- Issue #3137: Don't ignore errors at startup, especially a keyboard interrupt
  (SIGINT).  If an error occurs while importing the site module, the error is
  printed and Python exits.  Initialize the GIL before importing the site
  module.

- Code objects now support weak references.

Library
-------

- Issue #8310: Allow dis to examine new style classes.

- Issue #8257: The Decimal construct now accepts a float instance
  directly, converting that float to a Decimal of equal value:

     >>> Decimal(1.1)
     Decimal('1.100000000000000088817841970012523233890533447265625')

- collections.Counter() now supports a subtract() method.

- the functools module now has a total_ordering() class decorator
  to simplify the specifying rich comparisons.

- The functools module also adds cmp_to_key() as a tool to transition
  old-style comparison functions to new-style key-functions.

- Issue #8294: The Fraction constructor now accepts Decimal and float
  instances directly.

- Issue #7279: Comparisons involving a Decimal signaling NaN now
  signal InvalidOperation instead of returning False.  (Comparisons
  involving a quiet NaN are unchanged.)  Also, Decimal quiet NaNs
  are now hashable;  Decimal signaling NaNs remain unhashable.

- Issue #2531: Comparison operations between floats and Decimal
  instances now return a result based on the numeric values of the
  operands;  previously they returned an arbitrary result based on
  the relative ordering of id(float) and id(Decimal).

- Issue #8233: When run as a script, py_compile.py optionally takes a single
  argument `-` which tells it to read files to compile from stdin.  Each line
  is read on demand and the named file is compiled immediately.  (Original
  patch by Piotr Ożarowski).

- Issue #3135: Add inspect.getcallargs, which binds arguments to a function
  like a normal call.
